minhasAtividades/VerificacaoVariaveis/miniCParser.py
# Generated from miniC.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class miniCParser ( Parser ):

    grammarFileName = "miniC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "','", "';'", "'='", "'('", "')'", "'{'", 
                     "'}'", "'+='", "'-='", "'*='", "'/='", "'%='", "'=='", 
                     "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", 
                     "'*'", "'/'", "'%'", "'++'", "'--'", "'if'", "'else'", 
                     "'while'", "'break'", "'continue'", "'return'", "'int'", 
                     "'char'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "IF", "ELSE", "WHILE", "BREAK", 
                      "CONTINUE", "RETURN", "INT", "CHAR", "IDENTIFIER", 
                      "CONSTANT_INT", "CONSTANT_CHAR", "WS", "COMMENT", 
                      "LINE_COMMENT" ]

    RULE_program = 0
    RULE_definition = 1
    RULE_data_definition = 2
    RULE_type = 3
    RULE_declarator = 4
    RULE_function_definition = 5
    RULE_function_header = 6
    RULE_parameter_list = 7
    RULE_parameter_declaration = 8
    RULE_function_body = 9
    RULE_block = 10
    RULE_statement = 11
    RULE_expression = 12
    RULE_binary = 13
    RULE_unary = 14
    RULE_primary = 15
    RULE_argument_list = 16

    ruleNames =  [ "program", "definition", "data_definition", "type", "declarator", 
                   "function_definition", "function_header", "parameter_list", 
                   "parameter_declaration", "function_body", "block", "statement", 
                   "expression", "binary", "unary", "primary", "argument_list" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    IF=26
    ELSE=27
    WHILE=28
    BREAK=29
    CONTINUE=30
    RETURN=31
    INT=32
    CHAR=33
    IDENTIFIER=34
    CONSTANT_INT=35
    CONSTANT_CHAR=36
    WS=37
    COMMENT=38
    LINE_COMMENT=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.DefinitionContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = miniCParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.definition()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 30064771072) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self):
            return self.getTypedRuleContext(miniCParser.Data_definitionContext,0)


        def function_definition(self):
            return self.getTypedRuleContext(miniCParser.Function_definitionContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefinition" ):
                return visitor.visitDefinition(self)
            else:
                return visitor.visitChildren(self)




    def definition(self):

        localctx = miniCParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_definition)
        try:
            self.state = 41
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.data_definition()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.function_definition()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(miniCParser.TypeContext,0)


        def declarator(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.DeclaratorContext)
            else:
                return self.getTypedRuleContext(miniCParser.DeclaratorContext,i)


        def expression(self):
            return self.getTypedRuleContext(miniCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_data_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitData_definition" ):
                return visitor.visitData_definition(self)
            else:
                return visitor.visitChildren(self)




    def data_definition(self):

        localctx = miniCParser.Data_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_data_definition)
        self._la = 0 # Token type
        try:
            self.state = 60
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 43
                self.type_()
                self.state = 44
                self.declarator()
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 45
                    self.match(miniCParser.T__0)
                    self.state = 46
                    self.declarator()
                    self.state = 51
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 52
                self.match(miniCParser.T__1)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.type_()
                self.state = 55
                self.declarator()
                self.state = 56
                self.match(miniCParser.T__2)
                self.state = 57
                self.expression()
                self.state = 58
                self.match(miniCParser.T__1)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(miniCParser.INT, 0)

        def CHAR(self):
            return self.getToken(miniCParser.CHAR, 0)

        def getRuleIndex(self):
            return miniCParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = miniCParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==32 or _la==33):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaratorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miniCParser.IDENTIFIER, 0)

        def expression(self):
            return self.getTypedRuleContext(miniCParser.ExpressionContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_declarator

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclarator" ):
                return visitor.visitDeclarator(self)
            else:
                return visitor.visitChildren(self)




    def declarator(self):

        localctx = miniCParser.DeclaratorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declarator)
        try:
            self.state = 68
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 64
                self.match(miniCParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 65
                self.match(miniCParser.IDENTIFIER)
                self.state = 66
                self.match(miniCParser.T__2)
                self.state = 67
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_definitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def function_header(self):
            return self.getTypedRuleContext(miniCParser.Function_headerContext,0)


        def function_body(self):
            return self.getTypedRuleContext(miniCParser.Function_bodyContext,0)


        def type_(self):
            return self.getTypedRuleContext(miniCParser.TypeContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_function_definition

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_definition" ):
                return visitor.visitFunction_definition(self)
            else:
                return visitor.visitChildren(self)




    def function_definition(self):

        localctx = miniCParser.Function_definitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_function_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32 or _la==33:
                self.state = 70
                self.type_()


            self.state = 73
            self.function_header()
            self.state = 74
            self.function_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_headerContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miniCParser.IDENTIFIER, 0)

        def parameter_list(self):
            return self.getTypedRuleContext(miniCParser.Parameter_listContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_function_header

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_header" ):
                return visitor.visitFunction_header(self)
            else:
                return visitor.visitChildren(self)




    def function_header(self):

        localctx = miniCParser.Function_headerContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_function_header)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(miniCParser.IDENTIFIER)
            self.state = 77
            self.parameter_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameter_declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.Parameter_declarationContext)
            else:
                return self.getTypedRuleContext(miniCParser.Parameter_declarationContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_list" ):
                return visitor.visitParameter_list(self)
            else:
                return visitor.visitChildren(self)




    def parameter_list(self):

        localctx = miniCParser.Parameter_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_parameter_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(miniCParser.T__3)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==32 or _la==33:
                self.state = 80
                self.parameter_declaration()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==1:
                    self.state = 81
                    self.match(miniCParser.T__0)
                    self.state = 82
                    self.parameter_declaration()
                    self.state = 87
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 90
            self.match(miniCParser.T__4)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Parameter_declarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(miniCParser.TypeContext,0)


        def declarator(self):
            return self.getTypedRuleContext(miniCParser.DeclaratorContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_parameter_declaration

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameter_declaration" ):
                return visitor.visitParameter_declaration(self)
            else:
                return visitor.visitChildren(self)




    def parameter_declaration(self):

        localctx = miniCParser.Parameter_declarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_parameter_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.type_()
            self.state = 93
            self.declarator()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def data_definition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.Data_definitionContext)
            else:
                return self.getTypedRuleContext(miniCParser.Data_definitionContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_function_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_body" ):
                return visitor.visitFunction_body(self)
            else:
                return visitor.visitChildren(self)




    def function_body(self):

        localctx = miniCParser.Function_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_function_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(miniCParser.T__5)
            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==32 or _la==33:
                self.state = 96
                self.data_definition()
                self.state = 101
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 124403056724) != 0):
                self.state = 102
                self.statement()
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(miniCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def getRuleIndex(self):
            return miniCParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = miniCParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(miniCParser.T__5)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 124403056724) != 0):
                self.state = 111
                self.statement()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 117
            self.match(miniCParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(miniCParser.ExpressionContext,0)


        def IF(self):
            return self.getToken(miniCParser.IF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.StatementContext)
            else:
                return self.getTypedRuleContext(miniCParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(miniCParser.ELSE, 0)

        def WHILE(self):
            return self.getToken(miniCParser.WHILE, 0)

        def BREAK(self):
            return self.getToken(miniCParser.BREAK, 0)

        def CONTINUE(self):
            return self.getToken(miniCParser.CONTINUE, 0)

        def RETURN(self):
            return self.getToken(miniCParser.RETURN, 0)

        def block(self):
            return self.getTypedRuleContext(miniCParser.BlockContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = miniCParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4, 24, 25, 34, 35, 36]:
                self.enterOuterAlt(localctx, 1)
                self.state = 119
                self.expression()
                self.state = 120
                self.match(miniCParser.T__1)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 122
                self.match(miniCParser.IF)
                self.state = 123
                self.match(miniCParser.T__3)
                self.state = 124
                self.expression()
                self.state = 125
                self.match(miniCParser.T__4)
                self.state = 126
                self.statement()
                self.state = 129
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                if la_ == 1:
                    self.state = 127
                    self.match(miniCParser.ELSE)
                    self.state = 128
                    self.statement()


                pass
            elif token in [28]:
                self.enterOuterAlt(localctx, 3)
                self.state = 131
                self.match(miniCParser.WHILE)
                self.state = 132
                self.match(miniCParser.T__3)
                self.state = 133
                self.expression()
                self.state = 134
                self.match(miniCParser.T__4)
                self.state = 135
                self.statement()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 4)
                self.state = 137
                self.match(miniCParser.BREAK)
                self.state = 138
                self.match(miniCParser.T__1)
                pass
            elif token in [30]:
                self.enterOuterAlt(localctx, 5)
                self.state = 139
                self.match(miniCParser.CONTINUE)
                self.state = 140
                self.match(miniCParser.T__1)
                pass
            elif token in [31]:
                self.enterOuterAlt(localctx, 6)
                self.state = 141
                self.match(miniCParser.RETURN)
                self.state = 143
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 120309415952) != 0):
                    self.state = 142
                    self.expression()


                self.state = 145
                self.match(miniCParser.T__1)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 7)
                self.state = 146
                self.block()
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 8)
                self.state = 147
                self.match(miniCParser.T__1)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binary(self):
            return self.getTypedRuleContext(miniCParser.BinaryContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_expression

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = miniCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.binary(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BinaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(miniCParser.IDENTIFIER, 0)

        def binary(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(miniCParser.BinaryContext)
            else:
                return self.getTypedRuleContext(miniCParser.BinaryContext,i)


        def unary(self):
            return self.getTypedRuleContext(miniCParser.UnaryContext,0)


        def getRuleIndex(self):
            return miniCParser.RULE_binary

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinary" ):
                return visitor.visitBinary(self)
            else:
                return visitor.visitChildren(self)



    def binary(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = miniCParser.BinaryContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 26
        self.enterRecursionRule(localctx, 26, self.RULE_binary, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 153
                self.match(miniCParser.IDENTIFIER)
                self.state = 154
                self.match(miniCParser.T__2)
                self.state = 155
                self.binary(18)
                pass

            elif la_ == 2:
                self.state = 156
                self.match(miniCParser.IDENTIFIER)
                self.state = 157
                self.match(miniCParser.T__7)
                self.state = 158
                self.binary(17)
                pass

            elif la_ == 3:
                self.state = 159
                self.match(miniCParser.IDENTIFIER)
                self.state = 160
                self.match(miniCParser.T__8)
                self.state = 161
                self.binary(16)
                pass

            elif la_ == 4:
                self.state = 162
                self.match(miniCParser.IDENTIFIER)
                self.state = 163
                self.match(miniCParser.T__9)
                self.state = 164
                self.binary(15)
                pass

            elif la_ == 5:
                self.state = 165
                self.match(miniCParser.IDENTIFIER)
                self.state = 166
                self.match(miniCParser.T__10)
                self.state = 167
                self.binary(14)
                pass

            elif la_ == 6:
                self.state = 168
                self.match(miniCParser.IDENTIFIER)
                self.state = 169
                self.match(miniCParser.T__11)
                self.state = 170
                self.binary(13)
                pass

            elif la_ == 7:
                self.state = 171
                self.unary()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 209
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 207
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                    if la_ == 1:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 174
                        if not self.precpred(self._ctx, 12):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 12)")
                        self.state = 175
                        self.match(miniCParser.T__12)
                        self.state = 176
                        self.binary(13)
                        pass

                    elif la_ == 2:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 177
                        if not self.precpred(self._ctx, 11):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 11)")
                        self.state = 178
                        self.match(miniCParser.T__13)
                        self.state = 179
                        self.binary(12)
                        pass

                    elif la_ == 3:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 180
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 181
                        self.match(miniCParser.T__14)
                        self.state = 182
                        self.binary(11)
                        pass

                    elif la_ == 4:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 183
                        if not self.precpred(self._ctx, 9):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 9)")
                        self.state = 184
                        self.match(miniCParser.T__15)
                        self.state = 185
                        self.binary(10)
                        pass

                    elif la_ == 5:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 186
                        if not self.precpred(self._ctx, 8):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 8)")
                        self.state = 187
                        self.match(miniCParser.T__16)
                        self.state = 188
                        self.binary(9)
                        pass

                    elif la_ == 6:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 189
                        if not self.precpred(self._ctx, 7):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 7)")
                        self.state = 190
                        self.match(miniCParser.T__17)
                        self.state = 191
                        self.binary(8)
                        pass

                    elif la_ == 7:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 192
                        if not self.precpred(self._ctx, 6):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 6)")
                        self.state = 193
                        self.match(miniCParser.T__18)
                        self.state = 194
                        self.binary(7)
                        pass

                    elif la_ == 8:
                        localctx = miniCParser.BinaryContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_binary)
                        self.state = 195
                        if not self.precpred(self._ctx, 5):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 5)")
                        self.state = 196
                        self.match(miniCParser.T__19)
